--- a/index.html
+++ b/index.html
@@ -192,7 +192,7 @@
             </div>
             <div class="row" >
               <div class="col-lg-8 col-lg-offset-2">
-                     <p>Are you lookinf for a bad ass developer to join your team? or a designer maybe for your upcoming project? Feel free to contact me on one of the details below.</p>
+                     <p>Are you looking for a bad ass developer to join your team? or a designer maybe for your upcoming project? Feel free to contact me on one of the details below.</p>
                     <p>frederick.rosales@gmail.com</p>
                     <ul class="list-inline banner-social-buttons">
                         <li><a href="https://twitter.com/rikriki" class="btn btn-outline green btn-lg"><i class="fa fa-twitter fa-fw"></i> <span class="network-name">Twitter</span></a>
