--- a/index.html
+++ b/index.html
@@ -175,6 +175,16 @@
                         <img width="400" alt="" heigth="313" class="img-responsive" src="img/emiratesExecutive_tn.jpg">
                     </a>
                 </div>
+                <div class="col-sm-4 portfolio-item">
+                        <a data-toggle="modal3" alt="17911375" class="portfolio-link" href="#portfolioModal4">
+                        <div class="caption">
+                            <div class="caption-content">
+                                <i class="fa fa-search-plus fa-3x"></i>
+                            </div>
+                        </div>
+                        <img width="400" alt="" heigth="313" class="img-responsive" src="img/inspireMe_tn.jpg">
+                    </a>
+                </div>
             </div>
             <a id="loadMore"><img src="img/ajax-loader.gif"/>Load more project</a>
             
