--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
 
 <body id="page-top" class="index">
 
-    <!-- Navigation -->
+    <!-- Navigation riki -->
 
     <script id="profile-template" type="text/x-handlebars-template">
 
