--- a/index.html
+++ b/index.html
@@ -67,9 +67,9 @@
                     </li>
                 </ul>
             </div>
-            <!-- /.navbar-collapse -->
+            <!--navbar-collapse -->
         </div>
-        <!-- /.container-fluid -->
+        <!-- container-fluid -->
     </nav>
     <header>
         <div class="container">
@@ -319,7 +319,7 @@
     <script src="js/freelancer.js"></script>
     <script src="js/owl.carousel.js"></script>
     <script src="js/jquery.scrollmagic.min.js"></script>
-    <script src="js/jquery.scrollmagic.debug.js"></script>
+    <!--<script src="js/jquery.scrollmagic.debug.js"></script>-->
 
 
     
