--- a/index.html
+++ b/index.html
@@ -36,7 +36,11 @@
 <body id="page-top" class="index pageLoading">
 
     <!-- Navigation -->
-<p><button id="showMenu">Show Menu</button></p>
+<button id="showMenu"></button>
+
+<div class="col-md-6 col-sm-6 col-xs-6 text-right navicon">
+                            <p>MENU</p><a href="#" class="nav_slide_button nav-toggle" id="trigger-overlay"><span></span></a>
+                        </div>
 <div id="perspective" class="perspective effect-airbnb">
     <div class="perspective-container">
         <div class="wrapper">
