--- a/index.html
+++ b/index.html
@@ -207,7 +207,7 @@
                             <ul class="list-inline banner-social-buttons">
                                 <li><a href="https://twitter.com/rikriki" class="btn btn-outline green btn-lg"><i class="fa fa-twitter fa-fw"></i> <span class="network-name">Twitter</span></a>
                                 </li>
-                                <li><a href="https://github.com/rikriki" class="btn btn-outline green btn-lg"><i class="fa fa-github fa-fw"></i> <span class="network-name">Github</span></a>
+                                <li><a href="https://github.com/rikirosales" class="btn btn-outline green btn-lg"><i class="fa fa-github fa-fw"></i> <span class="network-name">Github</span></a>
                                 </li>
                                 <li><a href="http://ae.linkedin.com/pub/frederick-rosales/8/297/28a" class="btn btn-outline green btn-lg"><i class="fa fa-linkedin fa-fw"></i> <span class="network-name">Linkedin</span></a>
                                 </li>
