--- a/index.html
+++ b/index.html
@@ -11,11 +11,11 @@
     <title>riki rosales IO</title>
 
     <!-- Bootstrap Core CSS -->
-    <link href="css/bootstrap.css" rel="stylesheet" type="text/css">
-    <link href="css/freelancer.css" rel="stylesheet" type="text/css">
-    <link href="css/component.css" rel="stylesheet" type="text/css">
-    <link href="css/owl.carousel.css" rel="stylesheet" type="text/css">
-    <link href="css/owl.theme.css" rel="stylesheet" type="text/css">
+    <link href="css/bootstrap.min.css" rel="stylesheet" type="text/css">
+    <link href="css/freelancer.min.css" rel="stylesheet" type="text/css">
+    <link href="css/component-min.css" rel="stylesheet" type="text/css">
+    <link href="css/owl.carousel.min.css" rel="stylesheet" type="text/css">
+    <link href="css/owl.theme.min.css" rel="stylesheet" type="text/css">
 
     
 
@@ -141,7 +141,7 @@
                             <h2 class="portfolioAnimate">Portfolio</h2>
                             <hr class="star-primary portfolioAnimate">
                             <div class="col-lg-8 col-lg-offset-2 text-center portfolioAnimate" id="portfolioMessage">
-                             <p>I'm Riki Rosales currently working as Senior Software Engineer for Interactive development at Emirates Airlines. Prior in working at Emirates, I've also worked for a multinational Agency which caters several international brands like Toyota, Lexus, Toys 'R' Us, Ikea, Marks & Spencer and Honda.</p>
+                             <p>I'm Riki currently working as Senior Software Engineer for Interactive development at Emirates Airlines. Prior in working at Emirates, I've also worked for a multinational Agency which caters several international brands like Toyota, Lexus, Toys 'R' Us, Ikea, Marks & Spencer and Honda.</p>
                             </div>
                         </div>
                     </div>
@@ -284,13 +284,13 @@
     <script src="//cdnjs.cloudflare.com/ajax/libs/gsap/1.14.2/TweenMax.min.js"></script>
     <script src="js/jquery-1.10.2.js"></script>
     <script src="//cdnjs.cloudflare.com/ajax/libs/handlebars.js/1.3.0/handlebars.min.js"></script>
-    <script src="js/main.js"></script>
-    <script src="js/bootstrap.js"></script>
+    <script src="js/main.min.js"></script>
+    <script src="js/bootstrap.min.js"></script>
     <script src="http://cdnjs.cloudflare.com/ajax/libs/jquery-easing/1.3/jquery.easing.min.js"></script>
-    <script src="js/classie.js"></script>
-    <script src="js/cbpAnimatedHeader.js"></script>
-    <script src="js/freelancer.js"></script>
-    <script src="js/owl.carousel.js"></script>
+    <script src="js/classie.min.js"></script>
+    <script src="js/cbpAnimatedHeader.min.js"></script>
+    <script src="js/freelancer.min.js"></script>
+    <script src="js/owl.carousel.min.js"></script>
     <script src="js/jquery.scrollmagic.min.js"></script>
     <!--<script src="js/jquery.scrollmagic.debug.js"></script>-->
 
