--- a/index.html
+++ b/index.html
@@ -167,7 +167,7 @@
                     <h2 class="portfolioAnimate">Portfolio</h2>
                     <hr class="star-primary portfolioAnimate">
                     <div class="col-lg-8 col-lg-offset-2 text-center portfolioAnimate" id="portfolioMessage">
-                     <p>I'm Riki Rosalescurrently working as Senior Software Engineer for Interactive development at Emirates Airlines. Prior in working at Emirates, I've also worked for a multinational Agency which caters several international brands like Toyota, Lexus, Toys 'R' Us, Ikea, Marks & Spencer and Honda.</p>
+                     <p>I'm Riki Rosales, currently working as Senior Software Engineer for Interactive development at the Emirates Group which consits of Emirates Airline, dnata, marhaba and emirates holiday.. Prior in working at Emirates, I've also worked for a multinational Agency which caters several international brands like Toyota, Lexus, Toys 'R' Us, Ikea, Marks & Spencer and Honda.</p>
                     </div>
                 </div>
             </div>
